Downgrade Java from 17 to 11